examples/invalid/semantics/set_immutable.aru
module examples.invalid.semantics.setImmutable

func main() {
    let name = "Bruno"

    // expected: semantic error; `name` is immutable.
    let name = "Ana"
}